<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Controllers.activities_products.AddProductActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_simple" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/product_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_foreground"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <Button
                    android:id="@+id/btnChoose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:text="Choose Images" />

                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:text="Upload" />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    app:met_primaryColor="@color/colorPrimaryDark"

                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_short_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="32"
                    android:hint="@string/enter_short_name"
                    app:met_primaryColor="@color/colorPrimaryDark"

                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/productprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_price"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:inputType="number"
                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/productbarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_barcode"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:inputType="number"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/productdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_desc"
                    app:met_primaryColor="@color/colorPrimaryDark"

                    app:met_floatingLabel="highlight" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/main_category"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/main_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_main_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/sub_category"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/sub_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_sub_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/category"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/group_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_group_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/company_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/company"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/company_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_company_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/package_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/pack"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/package_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_package_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/status_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/status"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/status_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_status_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/department_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/department"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>

                    <AutoCompleteTextView
                        android:layout_weight="1"
                        android:id="@+id/department_ip"
                        android:enabled="false"
                        android:layout_width="0dp"
                        android:layout_height= "wrap_content"/>
                    <Spinner
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:id="@+id/spinner_department_ip"
                        android:spinnerMode="dropdown"
                        />



                </LinearLayout>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/productdiscount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_disc"
                    android:text="0"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:inputType="number"
                    app:met_floatingLabel="highlight" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30dp"
        android:background="@color/gen_black">



        <TextView
            android:id="@+id/add_to_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_product"
            android:textSize="14sp"
            android:textColor="@color/gen_white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>
</LinearLayout>