<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Controllers.activities_traders.AddTraderActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_simple" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/trader_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_foreground"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:maxLines="1"
                    android:maxLength="32"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:enabled="false"

                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_desc"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:maxLength="64"
                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_location"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:maxLength="64"
                    app:met_floatingLabel="highlight" />





            </LinearLayout>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/ads_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/promate_this_trader"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/gen_white"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_selected_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/selected_contacts_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_x_small"
                            android:text="@string/activity_add_Catagories_to_Menu"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/selected_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>




            </LinearLayout>

            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_300"
                android:layout_marginTop="8dp"/>


            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_300"
                android:layout_marginTop="8dp"/>








        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30dp"
        android:background="@color/gen_black">



        <TextView
            android:id="@+id/add_to_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/edit_shop"
            android:textSize="14sp"
            android:textColor="@color/gen_white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>
</LinearLayout>