<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Controllers.activities_traders.AddTraderActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_simple" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/trader_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_launcher_foreground"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:maxLines="1"
                    android:maxLength="32"
                    app:met_primaryColor="@color/colorPrimaryDark"

                    app:met_floatingLabel="highlight" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_desc"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:maxLength="64"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/trader_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_location"
                    app:met_primaryColor="@color/colorPrimaryDark"
                    android:maxLength="64"
                    app:met_floatingLabel="highlight" />







            </LinearLayout>


            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_300"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30dp"
        android:background="@color/gen_black">



        <TextView
            android:id="@+id/add_to_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_shop"
            android:textSize="14sp"
            android:textColor="@color/gen_white"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>
</LinearLayout>